# retrospark

./: .gitignore  AGENTS.md  LICENSE  README.md  config.yaml  config_copy.yaml  mission.md  pyproject.toml
.agents/workflows/: antigravity_exporter.md
docs/: SKILL.md
knowledge/: agents_data_formats.md  data_gravity_decode.md  product_dataclaw.md  source_antigravity_data_guide.md  source_others_data_guide.md
retrospark/: __init__.py  cli.py  config.py
retrospark/extractors/: antigravity.py  claude.py  codex.py  common.py  custom.py  gemini.py  kimi.py  openclaw.py  opencode.py  parser.py  tools.py
retrospark/install_template/: SKILL.md
retrospark/markdown/: transformer.py
retrospark/skills/: manager.py  orchestrator.py
retrospark/vcs/: git_manager.py
tests/: generate_mock_data.py  test_cli.py  test_config.py  test_git_manager.py  test_parser.py  test_privacy.py  test_transformer.py  verify_extractors.py
