[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "retrospark"
version = "0.1.0"
description = "A Vibe Coding digital second brain that extracts and versions LLM interactions."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "RetroSpark Team" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click>=8.0.0",
]

[project.urls]
"Homepage" = "https://github.com/jiezi/retrospark"

[project.scripts]
retrospark = "retrospark.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["retrospark*"]
exclude = ["tests*"]
