[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "retrospark"
version = "0.1.0"
description = "Review, rethink, reinvent with AI."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "jiezi4ai" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["ai", "llm", "chat", "history", "claude", "gemini", "agent"]
dependencies = [
    "click>=8.0.0",
    "PyYAML>=6.0.0",
]

[project.urls]
"Homepage" = "https://github.com/jiezi/retrospark"

[project.scripts]
retrospark = "retrospark.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["retrospark*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
retrospark = ["install_template/*.md"]
